# esp-webrtc-solution-p4-nano

./: CMakeLists.txt  README.md  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.bak  post-create.sh
components/codec_board/: board_cfg.txt
main/: CMakeLists.txt  board.c  main.c  media_sys.c  settings.h  webrtc.c
solutions/doorbell_demo/: sdkconfig.defaults.esp32p4
solutions/doorbell_demo/main/: main.c
